--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,9 @@ extra:
 extra_css:
     - stylesheets/extra.css
 markdown_extensions:
+  - def_list
+  - pymdownx.tasklist:
+      custom_checkbox: true
   - pymdownx.highlight:
       anchor_linenums: true
       line_spans: __span
