--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,7 @@ extra:
 extra_css:
     - stylesheets/extra.css
 markdown_extensions:
+  - tables
   - def_list
   - pymdownx.tasklist:
       custom_checkbox: true
