--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,9 @@ extra:
   generator: false
 extra_css:
     - stylesheets/extra.css
+plugins:
+  - search
+  - meta-descriptions
 markdown_extensions:
   - tables
   - def_list
