adding analytics md
added what all events we track

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ nav:
   - Code Coverage: coverage.md
   - Running Replays in CI: cirunner.md
   - Common Errors: commonerrors.md
+  - Analytics: analytics.md
 theme:
   name: material
   logo: assets/logo.svg
