--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,7 +11,7 @@ nav:
   - Replay Testing: java_replay_testing.md
   - Runtime Mocking: mocking.md
   - Generating JUnit Tests: generate_automated_junit.md
-  - Frequency Logging: frequency_logging.md
+  - Selective Logging: selective_logging.md
   - Remote Replay: server.md
   - What do we track?: analytics.md
 theme:
